--- a/calculatorApp.html
+++ b/calculatorApp.html
@@ -1,1 +1,12 @@
-
+<template>
+    <lightning-card title="QuickCalc">
+        <div class="slds-p-around_medium slds-align_absolute-center slds-grid">
+          <div class="slds-col slds-p-horizontal_medium slds-align_absolute-center ">
+          <lightning-button label="CALCULATOR" variant="brand" onclick={handleClick}> </lightning-button>
+      </div>
+      <div class="slds-col slds-p-horizontal_medium slds-align_absolute-center ">
+          <lightning-button label="SCIENTIFIC CALCULATOR" variant="brand" onclick={handleClick}></lightning-button>
+      </div>
+    </div>
+    </lightning-card>
+</template>
